# oz-backend-django

./: manage.py  pyproject.toml
costomer/: asgi.py  settings.py  urls.py  wsgi.py
manufacturer/: forms.py  models.py  urls.py  views.py
manufacturer/migrations/: 0001_initial.py  0002_initial.py
order/: forms.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_initial.py
user/: forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
